# crucible

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  run.ps1  test.ps1
lib/: game.cpp  game.hpp
lib/component/: RectangleRenderer.hpp  position.hpp  velocity.hpp
lib/render/: GraphicsGame.cpp  GraphicsGame.hpp
lib/system/: baseSystem.hpp  velocitySystem.cpp  velocitySystem.hpp
src/: main.cpp
tests/: CMakeLists.txt  gtest.test.cpp
